# fastapi-starter

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
app/: interface.py  main.py  version.py
app/controllers/: __init__.py
app/errors/: error.py
app/routers/: version_router.py
docs/app/: cli.html  config.html  index.html  interface.html  main.html  version.html
docs/app/controllers/: index.html
docs/app/errors/: error.html  index.html
docs/app/models/: index.html
docs/app/routers/: index.html  version_router.html
docs/app/schemas/: index.html  version.html
docs/app/utils/: eureka.html  i18n.html  index.html  lifespan.html  middleware.html
src/app/: __init__.py  cli.py  config.py  interface.py  main.py  version.py
src/app/errors/: error.py
src/app/models/: __init__.py
src/app/routers/: __init__.py  version_router.py
src/app/translations/en/LC_MESSAGES/: messages.po
src/app/translations/fa/LC_MESSAGES/: messages.po
src/app/utils/: eureka.py  i18n.py  lifespan.py  middleware.py
tests/: test_i18n.py  test_root.py  test_version.py
